<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_3sdp"
    app:cardCornerRadius="3dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_3sdp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rCountry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_weight="1"
            android:text="-----"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="6">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/cases"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/rCases"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="----"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/deaths"
                android:textColor="@color/red"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/rDeaths"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="----"
                android:textColor="@color/red"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/recovered"
                android:textColor="@color/green"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:id="@+id/rRecovered"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="----"
                android:textColor="@color/green"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>